--- a/copyright.html
+++ b/copyright.html
@@ -1,1 +1,1 @@
-<div class="kd-footer"> <span>  © <span>2021</span> NetFruit Technologies Inc.  </span> </div>
+<div class="kd-footer"> <span>  © <span>2021</span> Your Company  </span> </div>
